--- a/.vs-code/settings.json
+++ b/.vs-code/settings.json
@@ -5,6 +5,10 @@
             "name": "JavaSE-25",
             "path": "/home/ale/.sdkman/candidates/java/25-tem",
             "default": true
+        },
+        {
+            "name": "JavaSE-21",
+            "path": "/home/ale/.sdkman/candidates/java/21.0.9-tem"
         }
     ],
     "maven.executable.path": "/home/ale/.sdkman/candidates/maven/current/bin/mvn",
